# AIAgentBookCC2

./: CLAUDE.md  SESSION-CONTEXT.md  STATE.md  requirements.txt  プロンプト（ClaudeCode）.txt  確認用プロンプト.txt
.claude/: settings.local.json
artifacts/06_code-generation/src/: .env.template  e2e_test.py  main.py  pyproject.toml
artifacts/06_code-generation/src/agents/: base_agent.py  expense_application_agent.py  orchestrator_agent.py  transport_application_agent.py
artifacts/06_code-generation/src/config/: model_config.py  settings.py
artifacts/06_code-generation/src/data/: train_fares.json
artifacts/06_code-generation/src/evals/: eval_goal_success_rate.py  eval_tool_selection.py  helpers.py
artifacts/06_code-generation/src/evals/cases/: goal_success_rate_cases.py  tool_selection_cases.py
artifacts/06_code-generation/src/guardrails/: guardrails_cloudformation.yaml
artifacts/06_code-generation/src/handlers/: console_approval_adapter.py  error_handler.py  human_approval_hook.py  loop_control_hook.py
artifacts/06_code-generation/src/knowledge/: expense_policies.py  transport_policies.py
artifacts/06_code-generation/src/models/: data_models.py
artifacts/06_code-generation/src/outputs/: 交通費精算申請書_20260704003052.xlsx
artifacts/06_code-generation/src/prompt/: prompt_expense.py  prompt_orchestrator.py  prompt_transport.py
artifacts/06_code-generation/src/session/: session_manager.py
artifacts/06_code-generation/src/template/: fixed_fares.json  交通費精算申請書テンプレート.xlsx  経費精算申請書テンプレート.xlsx
artifacts/06_code-generation/src/tools/: output_generator.py  transport_tools.py
(+264 files in other folders)
